--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mandi Grant - Web Developer - majoh.dev</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Mandi Burley - Web Developer - majoh.dev</title>
+  <link rel="stylesheet" type="text/css" href="style.css?v=1.02">
   <link href='http://fonts.googleapis.com/css?family=Arvo:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -11,16 +11,15 @@
   <div id="contact">
     <ul>
       <li><a href="https://github.com/MJGrant">GitHub</a></li>
-      <li><a href="https://twitter.com/WyGrant">Twitter</a></li>
       <li><a href="https://www.linkedin.com/in/majoh">LinkedIn</a></li>
-      <li><a href="mailto:mandi@majoh.com">e-mail</a></li>
       <li><a href="http://tilcode.com">Blog</a></li>
+      <li><a href="mailto:mandi018@gmail.com">e-mail</a></li>
     </ul>
   </div>
 
   <div id="nameAndTitle">
-    <h1 id="name">Mandi Johnson</h1>
-    <p>Web developer, artist, designer based near Chicago, IL</p>
+    <h1 id="name">Mandi Burley</h1>
+    <p>Software engineer and artist based near Chicago, IL</p>
   </div>
 
   <div class="divider"></div>
@@ -45,7 +44,21 @@
     </p>
   </section>
 
+  <!-- Amazin' Affiliate Link Checker -->
+  <section class="project-cell">
+    <a href="http://amazin-link-checker.herokuapp.com/" class="image"><img src="projectimgs/project_amazin.png"></a>
+    <header>
+      <h3>Amazin' Affiliate Link Checker</h3>
+    </header>
+    <p>Identify broken Amazon Affiliate links on your blog pages using this single-page app built using <b>React</b>, <b>Socket.io</b>, and the <b>Amazon Product Advertising API</b>. <a href="https://youtu.be/Y0l0wju3tZg">Watch a demo video</a>.
+      <ul>
+        <li><a href="http://amazin-link-checker.herokuapp.com/">Amazin' Affiliate Link Checker</a></li>
+        <li><a href="https://github.com/MJGrant/amazin-link-checker">Amazin' files on GitHub</a></li>
+      </ul>
+  </section>
+
   <!-- Find Fit -->
+  <!--
   <section class="project-cell">
     <a href="http://findfit.herokuapp.com/" class="image"><img src="projectimgs/project_along_the_way.jpg"></a>
     <header>
@@ -57,16 +70,17 @@
         <li><a href="https://github.com/teamswolicorns/along_the_way">FindFit files on GitHub</a></li>
       </ul>
   </section>
+-->
 
   <!-- Tower Secrets -->
   <section class="project-cell">
-    <a href="http://towersecrets.com/" class="image"><img src="projectimgs/project_towersecrets.jpg"></a>
+    <a href="https://towersecrets.com/" class="image"><img src="projectimgs/project_towersecrets.jpg"></a>
     <header>
       <h3>Tower Secrets</h3>
     </header>
     <p>My own hobby site. Designed and implemented a custom <b>Wordpress</b> mobile-friendly theme using the <b>Genesis framework</b>.
       <ul>
-        <li><a href="http://towersecrets.com">Visit live site</a></li>
+        <li><a href="https://towersecrets.com">Visit live site</a></li>
         <li><a href="https://github.com/MJGrant/TowerSecrets-WPTheme">Theme files on GitHub</a></li>
       </uL>
     </p>
@@ -82,18 +96,20 @@
   <section id="technologies">
     <h2>Skills and Languages</h2>
     <ul>
+      <li>React</li>
       <li>AngularJS</li>
+      <li>Ember.js</li>
       <li>UX</li>
       <li>TDD</li>
-      <li>Automated testing</li>
-      <li>Responsive design</li>
+      <li>Unit and integration testing</li>
       <li>JavaScript</li>
       <li>HTML</li>
       <li>CSS</li>
-      <li>ActionScript</li>
+      <li>Godot game engine</li>
+      <li>Writing documentation and tutorials</li>
       <li>Wordpress</li>
-      <li>Genesis</li>
       <li>Agile certified</li>
+      <li>Full software development lifecycle</li>
     </ul>
   </section>
 
@@ -118,11 +134,13 @@
   <span class="dates">2013 - Current</span>
 
   <ul>
-      <li>Built web app in AngularJS and Bootstrap to scrape data from a Google spreadsheet and display it in a user-friendly responsive design website <a href="http://osu-cs-course-explorer.com">OSU CS Course Explorer</a> (<a href="https://github.com/MJGrant/osu-cs-class-explorer">GitHub</a>)</li>
+      <li>Designed and built original "link checker" web app using React, socket.io, node.js and the Amazon Product Advertising API <a href="http://amazin-link-checker.herokuapp.com">Amazin' Affiliate Link Checker</a> (<a href="https://github.com/MJGrant/amazin-link-checker">GitHub</a>)</li>
+      <li>Designed and built original "course reviews" web app in Angular and node.js that scrapes data from a Google spreadsheet and displays it in a user-friendly responsive design website <a href="http://osu-cs-course-explorer.com">OSU CS Course Explorer</a> (<a href="https://github.com/MJGrant/osu-cs-class-explorer">GitHub</a>)</li>
       <!--
       <li>Designed and built frontend and backend of <a href="http://chickenbreastmeals.herokuapp.com">Chicken Breast Meals</a>, a recipe website and admin CMS (<a href="https://github.com/MJGrant/ChickenBreastMeals.com">GitHub</a>)</li>-->
+      <!--
       <li>Coded the AngularJS front-end for Code Fellows team project <a href="http://instapitch.herokuapp.com/">InstaPitch</a> (<a href="https://github.com/instapitch/InstaPitch">GitHub</a>)</li>
-      <li>Implemented InstaPitch's MongoDB-based admin CMS (<a href="https://github.com/instapitch/InstaPitch">GitHub</a>)</li>
+      <li>Implemented InstaPitch's MongoDB-based admin CMS (<a href="https://github.com/instapitch/InstaPitch">GitHub</a>)</li> -->
       <li>Developed and maintained personal Wordpress sites, including <a href="http://towersecrets.com">TowerSecrets.com</a> (<a href="https://github.com/MJGrant/TowerSecrets-WPTheme">GitHub</a>) and <a href="http://diycraftphotography.com">DIYCraftPhotography.com</a> </li>
       <li>Customized Genesis child theme and Wordpress loop to meet the needs of several different websites</li>
     </ul>
