Updating github links to match new username

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <a href="#top">
   <div id="contact">
     <ul>
-      <li><a href="https://github.com/MJGrant">GitHub</a></li>
+      <li><a href="https://github.com/manderly">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/majoh">LinkedIn</a></li>
       <li><a href="http://tilcode.com">Blog</a></li>
       <li><a href="mailto:mandi018@gmail.com">e-mail</a></li>
@@ -39,7 +39,7 @@
     <p><b>AngularJS</b> site consumes <a href="http://ecampus.oregonstate.edu/online-degrees/undergraduate/computer-science/">Oregon State University online CS</a> course survey data from a <a href="https://docs.google.com/spreadsheets/d/1MFBGJbOXVjtThgj5b6K0rv9xdsC1M2GQ0pJVB-8YCeU/edit#gid=2042942971">Google Spreadsheet</a> and displays it in a responsive, navigable format.
       <ul>
         <li><a href="http://osu-cs-course-explorer.com/">osu-cs-course-explorer.com</a></li>
-        <li><a href="https://github.com/MJGrant/osu-cs-class-explorer">OSU CS Explorer files on GitHub</a></li>
+        <li><a href="https://github.com/manderly/osu-cs-class-explorer">OSU CS Explorer files on GitHub</a></li>
       </ul>
     </p>
   </section>
@@ -53,24 +53,9 @@
     <p>Identify broken Amazon Affiliate links on your blog pages using this single-page app built using <b>React</b>, <b>Socket.io</b>, and the <b>Amazon Product Advertising API</b>. <a href="https://youtu.be/Y0l0wju3tZg">Watch a demo video</a>.
       <ul>
         <li><a href="http://amazin-link-checker.herokuapp.com/">Amazin' Affiliate Link Checker</a></li>
-        <li><a href="https://github.com/MJGrant/amazin-link-checker">Amazin' files on GitHub</a></li>
+        <li><a href="https://github.com/manderly/amazin-link-checker">Amazin' files on GitHub</a></li>
       </ul>
   </section>
-
-  <!-- Find Fit -->
-  <!--
-  <section class="project-cell">
-    <a href="http://findfit.herokuapp.com/" class="image"><img src="projectimgs/project_along_the_way.jpg"></a>
-    <header>
-      <h3>FindFit</h3>
-    </header>
-    <p>Contributed several complete features to this single-page <b>Backbone</b> app built at Code Fellows. The app uses <b>JavaScript</b> and the <b>Google Maps and Places APIs</b> to find points of interest along a route.
-      <ul>
-        <li><a href="http://findfit.herokuapp.com/">FindFit on Heroku</a></li>
-        <li><a href="https://github.com/teamswolicorns/along_the_way">FindFit files on GitHub</a></li>
-      </ul>
-  </section>
--->
 
   <!-- Tower Secrets -->
   <section class="project-cell">
@@ -81,7 +66,7 @@
     <p>My own hobby site. Designed and implemented a custom <b>Wordpress</b> mobile-friendly theme using the <b>Genesis framework</b>.
       <ul>
         <li><a href="https://towersecrets.com">Visit live site</a></li>
-        <li><a href="https://github.com/MJGrant/TowerSecrets-WPTheme">Theme files on GitHub</a></li>
+        <li><a href="https://github.com/manderly/TowerSecrets-WPTheme">Theme files on GitHub</a></li>
       </uL>
     </p>
   </section>
@@ -134,14 +119,9 @@
   <span class="dates">2013 - Current</span>
 
   <ul>
-      <li>Designed and built original "link checker" web app using React, socket.io, node.js and the Amazon Product Advertising API <a href="http://amazin-link-checker.herokuapp.com">Amazin' Affiliate Link Checker</a> (<a href="https://github.com/MJGrant/amazin-link-checker">GitHub</a>)</li>
-      <li>Designed and built original "course reviews" web app in Angular and node.js that scrapes data from a Google spreadsheet and displays it in a user-friendly responsive design website <a href="http://osu-cs-course-explorer.com">OSU CS Course Explorer</a> (<a href="https://github.com/MJGrant/osu-cs-class-explorer">GitHub</a>)</li>
-      <!--
-      <li>Designed and built frontend and backend of <a href="http://chickenbreastmeals.herokuapp.com">Chicken Breast Meals</a>, a recipe website and admin CMS (<a href="https://github.com/MJGrant/ChickenBreastMeals.com">GitHub</a>)</li>-->
-      <!--
-      <li>Coded the AngularJS front-end for Code Fellows team project <a href="http://instapitch.herokuapp.com/">InstaPitch</a> (<a href="https://github.com/instapitch/InstaPitch">GitHub</a>)</li>
-      <li>Implemented InstaPitch's MongoDB-based admin CMS (<a href="https://github.com/instapitch/InstaPitch">GitHub</a>)</li> -->
-      <li>Developed and maintained personal Wordpress sites, including <a href="http://towersecrets.com">TowerSecrets.com</a> (<a href="https://github.com/MJGrant/TowerSecrets-WPTheme">GitHub</a>) and <a href="http://diycraftphotography.com">DIYCraftPhotography.com</a> </li>
+      <li>Designed and built original "link checker" web app using React, socket.io, node.js and the Amazon Product Advertising API <a href="http://amazin-link-checker.herokuapp.com">Amazin' Affiliate Link Checker</a> (<a href="https://github.com/manderly/amazin-link-checker">GitHub</a>)</li>
+      <li>Designed and built original "course reviews" web app in Angular and node.js that scrapes data from a Google spreadsheet and displays it in a user-friendly responsive design website <a href="http://osu-cs-course-explorer.com">OSU CS Course Explorer</a> (<a href="https://github.com/manderly/osu-cs-class-explorer">GitHub</a>)</li>
+      <li>Developed and maintained personal Wordpress sites, including <a href="http://towersecrets.com">TowerSecrets.com</a> (<a href="https://github.com/manderly/TowerSecrets-WPTheme">GitHub</a>) and <a href="http://diycraftphotography.com">DIYCraftPhotography.com</a> </li>
       <li>Customized Genesis child theme and Wordpress loop to meet the needs of several different websites</li>
     </ul>
 
