--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <div class="row">
 
-  <!-- Chicken Breast Meals -->
+  <!-- OSU CS Course Explorer -->
   <section class="project-cell">
     <a href="https://osu-cs-course-explorer.com/" class="image"><img src="projectimgs/project_osucscourseexplorer.jpg"></a>
     <header>
@@ -46,13 +46,12 @@
 
   <!-- Amazin' Affiliate Link Checker -->
   <section class="project-cell">
-    <a href="http://amazin-link-checker.herokuapp.com/" class="image"><img src="projectimgs/project_amazin.png"></a>
+    <a href="https://github.com/manderly/amazin-link-checker" class="image"><img src="projectimgs/project_amazin.png"></a>
     <header>
       <h3>Amazin' Affiliate Link Checker</h3>
     </header>
     <p>Identify broken Amazon Affiliate links on your blog pages using this single-page app built using <b>React</b>, <b>Socket.io</b>, and the <b>Amazon Product Advertising API</b>. <a href="https://youtu.be/Y0l0wju3tZg">Watch a demo video</a>.
       <ul>
-        <li><a href="http://amazin-link-checker.herokuapp.com/">Amazin' Affiliate Link Checker</a></li>
         <li><a href="https://github.com/manderly/amazin-link-checker">Amazin' files on GitHub</a></li>
       </ul>
   </section>
@@ -82,12 +81,12 @@
     <h2>Skills and Languages</h2>
     <ul>
       <li>React</li>
+      <li>TypeScript</li>
       <li>AngularJS</li>
       <li>Ember.js</li>
       <li>UX</li>
       <li>TDD</li>
       <li>Unit and integration testing</li>
-      <li>JavaScript</li>
       <li>HTML</li>
       <li>CSS</li>
       <li>Godot game engine</li>
@@ -103,6 +102,14 @@
 
   <div id="container-workhistory">
   <h2>Experience</h2>
+  <h3>Software Engineer @ Seeq</h3>
+  <span class="dates">Jan. 2022 - Now</span>
+
+  <ul>
+      <li>Developed front-end features for industrial analytics app</li>
+      <li>Mentored team intern (6 month internship) on general development practices and project-specific skills</li>
+  </ul>
+    
   <h3>Software Engineer @ Expedia</h3>
   <span class="dates">Jan. 2015 - Aug. 2017</span>
 
