--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mandi Burley - Web Developer - majoh.dev</title>
-  <link rel="stylesheet" type="text/css" href="style.css?v=1.02">
+  <link rel="stylesheet" type="text/css" href="style.css?v=1.06">
   <link href='http://fonts.googleapis.com/css?family=Arvo:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -19,7 +19,36 @@
 
   <div id="nameAndTitle">
     <h1 id="name">Mandi Burley</h1>
-    <p>Software engineer and artist based near Chicago, IL</p>
+    <p>Hello! I am a software engineer with a background in <b>video game design</b> (9 years) and <b>full stack web development</b> (3 years).</p> 
+    <p>I'm enthusiastic about all aspects of software development, but I especially love building tools that make my team faster and more effective. As a hobbyist I dabble in Wordpress plugin development, Godot game development, and <a href="https://www.instagram.com/manderlyb/">digital painting</a>.</p>
+
+      <!-- education section -->
+    <div class="divider"></div>
+
+    <section id="education">
+      <h2>Education</h2>
+
+      <div class="degrees-container">
+        <h4 class="degree">Bachelor of Science in Computer Science (2020)</h4>
+        <p class="school-name">Oregon State University</p>
+
+        <h4 class="degree">Certificate, Full Stack JavaScript (2014)</h4>
+        <p class="school-name">CodeFellows Seattle</p>
+
+        <h4 class="degree">Bachelor of Fine Arts, Game Art and Design (2006)</h4>
+        <p class="school-name">The Illinois Institute of Art - Schaumburg</p>
+      </div>
+    </section>
+
+    <div class="divider"></div>
+
+    <section id="technologies">
+      <h2>Experienced with</h2>
+      <p><b>Web dev:</b> TypeScript, JavaScript, React, AngularJS, Ember.js, UX, HTML, CSS, Python, PHP, MySQL, unit and integration testing, TDD, git, continuous integration/deployment</p>
+      <p><b>Game dev:</b> 10+ shipped titles on various consoles, tool design, designing for handheld and mobile platforms, game feature design, economy design, Godot engine, Unreal engine, Perforce</p>
+      <p><b>Also:</b> Agile certified, feature planning and roadmaps, scoping and redesigns, technical and client-facing documentation, process development, cross-discipline collaboration</p>
+    </section>
+
   </div>
 
   <div class="divider"></div>
@@ -30,116 +59,100 @@
 
   <div class="row">
 
-  <!-- OSU CS Course Explorer -->
+  <!-- CS Course Explorer -->
   <section class="project-cell">
     <a href="https://osu-cs-course-explorer.com/" class="image"><img src="projectimgs/project_osucscourseexplorer.jpg"></a>
     <header>
       <h3>OSU CS Course Explorer</h3>
     </header>
-    <p><b>AngularJS</b> site consumes <a href="http://ecampus.oregonstate.edu/online-degrees/undergraduate/computer-science/">Oregon State University online CS</a> course survey data from a <a href="https://docs.google.com/spreadsheets/d/1MFBGJbOXVjtThgj5b6K0rv9xdsC1M2GQ0pJVB-8YCeU/edit#gid=2042942971">Google Spreadsheet</a> and displays it in a responsive, navigable format.
+    <p><a href="https://github.com/manderly/osu-cs-class-explorer">Project GitHub</a></p>
+    <p>My <b>AngularJS</b>-based app consumes <a href="http://ecampus.oregonstate.edu/online-degrees/undergraduate/computer-science/">Oregon State University online CS</a> course survey data from a <a href="https://docs.google.com/spreadsheets/d/1MFBGJbOXVjtThgj5b6K0rv9xdsC1M2GQ0pJVB-8YCeU/edit#gid=2042942971">Google Spreadsheet</a> and displays it in a responsive, navigable format.
       <ul>
-        <li><a href="http://osu-cs-course-explorer.com/">osu-cs-course-explorer.com</a></li>
-        <li><a href="https://github.com/manderly/osu-cs-class-explorer">OSU CS Explorer files on GitHub</a></li>
+        <li>See it live: <a href="https://osu-cs-course-explorer.com/">osu-cs-course-explorer.com</a></li>
       </ul>
     </p>
   </section>
 
   <!-- Amazin' Affiliate Link Checker -->
   <section class="project-cell">
-    <a href="https://github.com/manderly/amazin-link-checker" class="image"><img src="projectimgs/project_amazin.png"></a>
+    <a href="http://amazin-link-checker.herokuapp.com/" class="image"><img src="projectimgs/project_amazin.png"></a>
     <header>
       <h3>Amazin' Affiliate Link Checker</h3>
     </header>
-    <p>Identify broken Amazon Affiliate links on your blog pages using this single-page app built using <b>React</b>, <b>Socket.io</b>, and the <b>Amazon Product Advertising API</b>. <a href="https://youtu.be/Y0l0wju3tZg">Watch a demo video</a>.
+    <p><a href="https://github.com/manderly/amazin-link-checker">Project GitHub</a></p>
+    <p>Identify broken Amazon Affiliate links in your blog articles using this single-page app built using <b>React</b>, <b>Socket.io</b>, and the <b>Amazon Product Advertising API</b>. <a href="https://youtu.be/Y0l0wju3tZg">Watch a demo video</a>.
       <ul>
-        <li><a href="https://github.com/manderly/amazin-link-checker">Amazin' files on GitHub</a></li>
+        <li>See it live: <a href="https://amazin-link-checker.herokuapp.com/">Amazin' Affiliate Link Checker</a></li>
+        <li></li>
       </ul>
   </section>
 
-  <!-- Tower Secrets -->
+  <!-- Scene Together In -->
   <section class="project-cell">
-    <a href="https://towersecrets.com/" class="image"><img src="projectimgs/project_towersecrets.jpg"></a>
+    <a href="https://scene-together.herokuapp.com/" class="image"><img src="projectimgs/project_scenetogether.jpg"></a>
     <header>
-      <h3>Tower Secrets</h3>
+      <h3>Scene Together In...</h3>
     </header>
-    <p>My own hobby site. Designed and implemented a custom <b>Wordpress</b> mobile-friendly theme using the <b>Genesis framework</b>.
+    <p><a href="https://github.com/manderly/scene-together">Project GitHub</a></p>
+    <p>Find what shows your favorite actors have been in together with this <b>React</b> app I made to explore <b>The Movie Database API</b>.
       <ul>
-        <li><a href="https://towersecrets.com">Visit live site</a></li>
-        <li><a href="https://github.com/manderly/TowerSecrets-WPTheme">Theme files on GitHub</a></li>
-      </uL>
-    </p>
+        <li>See it live: <a href="https://scene-together.herokuapp.com/">Scene Together In</a></li>
+      </ul>
   </section>
+
   </div>
 </section><!-- closes project section-->
 </div> <!-- closes featured-work-wrapper -->
 
-<!-- technologies section -->
-<div class="divider"></div>
-
 <div class="resume-wrapper">
-  <section id="technologies">
-    <h2>Skills and Languages</h2>
+  <!-- Other projects -->
+  <section>
+    <h3>Other interesting projects</h3>
     <ul>
-      <li>React</li>
-      <li>TypeScript</li>
-      <li>AngularJS</li>
-      <li>Ember.js</li>
-      <li>UX</li>
-      <li>TDD</li>
-      <li>Unit and integration testing</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Godot game engine</li>
-      <li>Writing documentation and tutorials</li>
-      <li>Wordpress</li>
-      <li>Agile certified</li>
-      <li>Full software development lifecycle</li>
+      <li><a href="https://github.com/manderly/amazin-wp-product-box">Amazin WP Product Box</a> - a Wordpress plugin <a href="https://www.tilcode.com/building-a-wordpress-product-box-plugin-part-1-making-my-own-plugin-management-page/">I made</a> for my own sites</li>
+      <li><a href="https://github.com/manderly/grocery_go">Grocery Go</a> - Hobby project to try out Flutter and <a href="https://www.tilcode.com/building-a-flutter-app-part-1-installation-and-setup/">document my learnings</a></li>
+      <li><a href="https://github.com/manderly/godot-guildleader">Guild Leader</a> - Godot-engine hobby game project, for which I developed <a href="https://github.com/manderly/godot-guildleader/tree/master/parsely">my own data formatting tool</a></li>
+      <li><a href="https://www.tilcode.com/">TILcode.com</a> - my coding blog with tutorials</li>
     </ul>
   </section>
+</div>
 
+<div class="resume-wrapper">
   <!-- resume section -->
   <div class="divider"></div>
 
   <div id="container-workhistory">
-  <h2>Experience</h2>
-  <h3>Software Engineer @ Seeq</h3>
-  <span class="dates">Jan. 2022 - Now</span>
-
-  <ul>
-      <li>Developed front-end features for industrial analytics app</li>
-      <li>Mentored team intern (6 month internship) on general development practices and project-specific skills</li>
-  </ul>
-    
+  <h2>Professional History</h2>
   <h3>Software Engineer @ Expedia</h3>
   <span class="dates">Jan. 2015 - Aug. 2017</span>
 
   <ul>
-      <li>Developed full-stack features for multi-platform, multi-user apps in Ember and AngularJS</li>
-      <li>Lead a 2-month embedded apprenticeship coding project working with a pair of college freshmen to add new photo upload and management functionality to an existing Ember-based app</li>
-      <li>Supported and added features to web app built in AngularJS, JavaScript, and Scala</li>
-      <li>Debugged, improved, and added to the project's automated tests (Karma, Ruby/Cucumber)</li>
-      <li>Wrote MySQL stored procedures</li>
-      <li>Regular contributor to project-specific and onboarding documentation</li>
+      <li>- Developed full-stack features for multi-platform, multi-user apps in Ember and AngularJS</li>
+      <li>- Lead a 2-month embedded apprenticeship coding project working with a pair of college freshmen to add new photo upload and management functionality to an existing Ember-based app</li>
+      <li>- Supported and added features to web app built in AngularJS, JavaScript, and Scala</li>
+      <li>- Debugged, improved, and added to the project's automated tests (Karma, Ruby/Cucumber)</li>
+      <li>- Wrote MySQL stored procedures</li>
+      <li>- Regular contributor to project-specific and onboarding documentation</li>
   </ul>
 
   <h3>Independent Web Developer</h3>
   <span class="dates">2013 - Current</span>
 
   <ul>
-      <li>Designed and built original "link checker" web app using React, socket.io, node.js and the Amazon Product Advertising API <a href="http://amazin-link-checker.herokuapp.com">Amazin' Affiliate Link Checker</a> (<a href="https://github.com/manderly/amazin-link-checker">GitHub</a>)</li>
-      <li>Designed and built original "course reviews" web app in Angular and node.js that scrapes data from a Google spreadsheet and displays it in a user-friendly responsive design website <a href="http://osu-cs-course-explorer.com">OSU CS Course Explorer</a> (<a href="https://github.com/manderly/osu-cs-class-explorer">GitHub</a>)</li>
-      <li>Developed and maintained personal Wordpress sites, including <a href="http://towersecrets.com">TowerSecrets.com</a> (<a href="https://github.com/manderly/TowerSecrets-WPTheme">GitHub</a>) and <a href="http://diycraftphotography.com">DIYCraftPhotography.com</a> </li>
-      <li>Customized Genesis child theme and Wordpress loop to meet the needs of several different websites</li>
+      <li>- Designed and built original "link checker" web app using React, socket.io, node.js and the Amazon Product Advertising API <a href="http://amazin-link-checker.herokuapp.com">Amazin' Affiliate Link Checker</a> (<a href="https://github.com/manderly/amazin-link-checker">GitHub</a>)</li>
+      <li>- Designed and built original "course reviews" web app in Angular and node.js that scrapes data from a Google spreadsheet and displays it in a user-friendly responsive design website <a href="http://osu-cs-course-explorer.com">OSU CS Course Explorer</a> (<a href="https://github.com/manderly/osu-cs-class-explorer">GitHub</a>)</li>
+      <li>- Developed and maintained personal Wordpress sites, including <a href="http://towersecrets.com">TowerSecrets.com</a> (<a href="https://github.com/manderly/TowerSecrets-WPTheme">GitHub</a>) and <a href="http://diycraftphotography.com">DIYCraftPhotography.com</a> </li>
+      <li>- Customized Genesis child theme and Wordpress loop to meet the needs of several different websites</li>
     </ul>
 
   <h3>Game Designer @ Disney Social</h3>
   <span class="dates">February 2013 - April 2014</span>
 
   <ul>
-      <li>Collaborated with client and server engineers to develop asynchronous multiplayer features to create a consistent experience for players</li>
-      <li>Assisted in design of studio-wide data management tool</li>
-      <li>Lead UX team on improvements that significantly improved product's performance in UX tests</li>
-      <li>Designed new user onboarding experience for Facebook game</li>
+      <li>- Collaborated with client and server engineers to develop asynchronous multiplayer features to create a consistent experience for players</li>
+      <li>- Assisted in design of studio-wide data management tool</li>
+      <li>- Lead UX team on improvements that significantly improved product's performance in UX tests</li>
+      <li>- Designed new user onboarding experience for Facebook game</li>
     </ul>
 
   <h3>Lead Designer @ Glu Mobile</h3>
@@ -147,31 +160,39 @@
 
   <span class="acquired">(formerly Griptonite Games, acquired 2011)</span>
   <ul>
-    <li>Built Flash prototype game to help secure project greenlight</li>
-    <li>Authored Java-based string processing and table data tool</li>
-    <li>Oversaw combat balancing, level design, and overall game scoping</li>
+    <li>- Independently developed Flash ActionScript prototype to help secure project greenlight and demo project idea to team</li>
+    <li>- Authored Java-based string processing and table data tool</li>
+    <li>- Oversaw combat balancing, level design, and overall game scoping</li>
+    <li>- Wrote detailed technical documents detailing gameplay features for team's programmers</li>
+    <li>- Wrote pitch decks and overarching game design documents</li>
   </ul>
 
   <h3>Lead Artist/Designer @ Webfoot Technologies, Inc.</h3>
   <span class="dates">April 2006 - December 2008</span>
 
     <ul>
-      <li>Designed and implemented Flash-based game menus</li>
-      <li>Collaborated with programming team to develop features and tool support</li>
+      <li>- Designed and implemented ActionScript game menus for Nintendo DS titles</li>
+      <li>- Collaborated with programming team to develop features and tool support</li>
+      <li>- Scripted gameplay events and cutscenes</li>
+      <li>- Modeled and animated 3D low-poly characters, props, environments</li>
+      <li>- Rendered 2D character portraits and backgrounds</li>
     </ul>
   </br>
 
-  <!-- education section -->
-  <div class="divider"></div>
-
-  <h2>Education</h2>
-  <h3>Oregon State University</h3>
-  <p>Bachelor of Science in Computer Science (expected 2020)</p>
-  <h3>Code Fellows</h3>
-  <p>Certificate, Full Stack JavaScript (2014)</p>
-  <h3>The Illinois Institute of Art - Schaumburg</h3>
-  <p>Bachelor of Fine Arts, Game Art and Design (2006)</p>
-
+  <h2>Shipped Titles</h2>
+  <ul>
+    <li>Marvel Avengers Alliance Tactics (2014) - Facebook</li>
+    <li>Enchant U (2012) - iOS/Android</li>
+    <li>Marvel Super Hero Squad: Comic Combat (2011) - Wii, PS3, XBOX 360</li>
+    <li>Shrek 4 Forever After (2012) - Nintendo DS</li>
+    <li>The Penguins of Madagascar (2010) - Nintendo DS</li>
+    <li>Solitaire Mahjong - Ancient China Adventure (2009) - Nintendo DS</li>
+    <li>Dream Day Wedding Destinations (2009) - Nintendo DS</li>
+    <li>American Girl: Kit Mystery Challenge! (2008) - Nintendo DS</li>
+    <li>American Girl: Julie Finds a Way (2007) - Nintendo DS</li>
+    <li>My Little Pony: Pinkie Pie's Party (2008) - Nintendo DS</li>
+    <li>My Little Pony: The Runaway Rainbow (2006) - PC</li>
+  </ul>
 
   </div><!-- closes container-workhistory -->
 
