Adding current employer

--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
 
   <div id="container-workhistory">
   <h2>Professional History</h2>
+
+  <h3>Software Engineer @ Seeq</h3>
+  <span class="dates">Jan. 2022 - Now</span>
+
+  <ul>
+      <li>- Developed front-end features for industrial analytics app</li>
+      <li>- Mentored team intern (6 month internship)</li>
+  </ul>
+  
   <h3>Software Engineer @ Expedia</h3>
   <span class="dates">Jan. 2015 - Aug. 2017</span>
 
@@ -136,7 +145,7 @@
   </ul>
 
   <h3>Independent Web Developer</h3>
-  <span class="dates">2013 - Current</span>
+  <span class="dates">2013 - 2021</span>
 
   <ul>
       <li>- Designed and built original "link checker" web app using React, socket.io, node.js and the Amazon Product Advertising API <a href="http://amazin-link-checker.herokuapp.com">Amazin' Affiliate Link Checker</a> (<a href="https://github.com/manderly/amazin-link-checker">GitHub</a>)</li>
