--- a/index.html
+++ b/index.html
@@ -75,29 +75,29 @@
 
   <!-- Amazin' Affiliate Link Checker -->
   <section class="project-cell">
-    <a href="http://amazin-link-checker.herokuapp.com/" class="image"><img src="projectimgs/project_amazin.png"></a>
+    <a href="https://github.com/manderly/amazin-link-checker" class="image"><img src="projectimgs/project_amazin.png"></a>
     <header>
       <h3>Amazin' Affiliate Link Checker</h3>
     </header>
     <p><a href="https://github.com/manderly/amazin-link-checker">Project GitHub</a></p>
     <p>Identify broken Amazon Affiliate links in your blog articles using this single-page app built using <b>React</b>, <b>Socket.io</b>, and the <b>Amazon Product Advertising API</b>. <a href="https://youtu.be/Y0l0wju3tZg">Watch a demo video</a>.
-      <ul>
+      <!-- <ul>
         <li>See it live: <a href="https://amazin-link-checker.herokuapp.com/">Amazin' Affiliate Link Checker</a></li>
         <li></li>
-      </ul>
+      </ul> -->
   </section>
 
   <!-- Scene Together In -->
   <section class="project-cell">
-    <a href="https://scene-together.herokuapp.com/" class="image"><img src="projectimgs/project_scenetogether.jpg"></a>
+    <a href="https://github.com/manderly/scene-together" class="image"><img src="projectimgs/project_scenetogether.jpg"></a>
     <header>
       <h3>Scene Together In...</h3>
     </header>
     <p><a href="https://github.com/manderly/scene-together">Project GitHub</a></p>
     <p>Find what shows your favorite actors have been in together with this <b>React</b> app I made to explore <b>The Movie Database API</b>.
-      <ul>
+      <!-- <ul>
         <li>See it live: <a href="https://scene-together.herokuapp.com/">Scene Together In</a></li>
-      </ul>
+      </ul> -->
   </section>
 
   </div>
