--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
       <li><a href="https://github.com/manderly">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/majoh">LinkedIn</a></li>
-      <li><a href="http://tilcode.com">Blog</a></li>
+      <li><a href="https://tilcode.com">Blog</a></li>
       <li><a href="mailto:mandi018@gmail.com">e-mail</a></li>
     </ul>
   </div>
