Updating resume contents for 2024, adding C2 Erg Bests even though it is still a little baby project

--- a/index.html
+++ b/index.html
@@ -19,90 +19,82 @@
 
   <div id="nameAndTitle">
     <h1 id="name">Mandi Burley</h1>
-    <p>Hello! I am a software engineer with a background in <b>video game design</b> (9 years) and <b>full stack web development</b> (3 years).</p> 
-    <p>I'm enthusiastic about all aspects of software development, but I especially love building tools that make my team faster and more effective. As a hobbyist I dabble in Wordpress plugin development, Godot game development, and <a href="https://www.instagram.com/manderlyb/">digital painting</a>.</p>
-
-      <!-- education section -->
-    <div class="divider"></div>
-
-    <section id="education">
-      <h2>Education</h2>
-
-      <div class="degrees-container">
-        <h4 class="degree">Bachelor of Science in Computer Science (2020)</h4>
-        <p class="school-name">Oregon State University</p>
-
-        <h4 class="degree">Certificate, Full Stack JavaScript (2014)</h4>
-        <p class="school-name">CodeFellows Seattle</p>
-
-        <h4 class="degree">Bachelor of Fine Arts, Game Art and Design (2006)</h4>
-        <p class="school-name">The Illinois Institute of Art - Schaumburg</p>
-      </div>
-    </section>
-
+    <p>Hello! I am a software engineer with a background in <b>game design</b> (9 years) and <b>web development</b> (5 years).</p>
+    <p>The end user is at the center of everything I do. ♥️</p>
     <div class="divider"></div>
 
     <section id="technologies">
       <h2>Experienced with</h2>
-      <p><b>Web dev:</b> TypeScript, JavaScript, React, AngularJS, Ember.js, UX, HTML, CSS, Python, PHP, MySQL, unit and integration testing, TDD, git, continuous integration/deployment</p>
-      <p><b>Game dev:</b> 10+ shipped titles on various consoles, tool design, designing for handheld and mobile platforms, game feature design, economy design, Godot engine, Unreal engine, Perforce</p>
-      <p><b>Also:</b> Agile certified, feature planning and roadmaps, scoping and redesigns, technical and client-facing documentation, process development, cross-discipline collaboration</p>
+      <p><b>Web dev:</b> TypeScript, React, AngularJS, MUI, Bootstrap, Wordpress, unit and integration testing, TDD, git, CI/CD</p>
+      <p><b>Game dev:</b> 10+ shipped titles on Nintendo DS and other consoles, tool design, designing for handheld and mobile platforms, game feature design, economy design, stakeholder- and team-facing documentation, prototypes</p>
+      <p><b>Also:</b> Photoshop mockups and prototypes, feature planning and roadmaps, scoping, technical and client-facing documentation, process development, cross-discipline collaboration, turning ambiguity into actionable designs</p>
     </section>
-
+    <div class="divider"></div>
   </div>
 
-  <div class="divider"></div>
+  <div class="featured-work-wrapper">
+    <section id="projects">
+      <h2 class="centered-text">Project Portfolio</h2>
+      <div class="row">
+        <!-- CS Course Explorer -->
+        <section class="project-cell">
+          <a href="https://osu-cs-course-explorer.com/" class="image"><img src="projectimgs/project_osucscourseexplorer.jpg"></a>
+          <header>
+            <h3>OSU CS Course Explorer</h3>
+          </header>
+          <p><a href="https://github.com/manderly/osu-cs-class-explorer">Project GitHub</a></p>
+          <p>My <b>AngularJS</b>-based app consumes <a href="http://ecampus.oregonstate.edu/online-degrees/undergraduate/computer-science/">Oregon State University online CS</a> course survey data from a <a href="https://docs.google.com/spreadsheets/d/1MFBGJbOXVjtThgj5b6K0rv9xdsC1M2GQ0pJVB-8YCeU/edit#gid=2042942971">Google Spreadsheet</a> and displays it in a responsive, navigable format.
+          <ul>
+            <li>See it live: <a href="https://osu-cs-course-explorer.com/">osu-cs-course-explorer.com</a></li>
+          </ul>
+          </p>
+        </section>
 
-<div class="featured-work-wrapper">
-<section id="projects">
-  <h2 class="centered-text">Project Portfolio</h2>
+        <!-- C2 Erg Bests -->
+        <section class="project-cell">
+          <a href="https://c2-erg-best.netlify.app/" class="image"><img src="projectimgs/project_c2_erg_best.png"></a>
+          <header>
+            <h3>C2 Erg Bests</h3>
+          </header>
+          <p><a href="https://github.com/manderly/c2-erg-best">Project GitHub</a></p>
+          <p>Hobby project I made in <b>React</b> to crunch my own Concept 2 rower and bike data and identify trends in my workouts.
+            <ul>
+              <li>See it live: <a href="https://c2-erg-best.netlify.app/">c2-erg-best.netlify.app/</a></li>
+            </ul>
+        </section>
 
-  <div class="row">
+        <!-- Amazin' Affiliate Link Checker -->
+        <section class="project-cell">
+          <a href="https://github.com/manderly/amazin-link-checker" class="image"><img src="projectimgs/project_amazin.png"></a>
+          <header>
+            <h3>Amazin' Affiliate Link Checker</h3>
+          </header>
+          <p><a href="https://github.com/manderly/amazin-link-checker">Project GitHub</a></p>
+          <p>Identify broken Amazon Affiliate links in your blog articles using this single-page app built using <b>React</b>, <b>Socket.io</b>, and the <b>Amazon Product Advertising API</b>. <a href="https://youtu.be/Y0l0wju3tZg">Watch a demo video</a>.
+            <!-- <ul>
+              <li>See it live: <a href="https://amazin-link-checker.herokuapp.com/">Amazin' Affiliate Link Checker</a></li>
+              <li></li>
+            </ul> -->
+        </section>
 
-  <!-- CS Course Explorer -->
-  <section class="project-cell">
-    <a href="https://osu-cs-course-explorer.com/" class="image"><img src="projectimgs/project_osucscourseexplorer.jpg"></a>
-    <header>
-      <h3>OSU CS Course Explorer</h3>
-    </header>
-    <p><a href="https://github.com/manderly/osu-cs-class-explorer">Project GitHub</a></p>
-    <p>My <b>AngularJS</b>-based app consumes <a href="http://ecampus.oregonstate.edu/online-degrees/undergraduate/computer-science/">Oregon State University online CS</a> course survey data from a <a href="https://docs.google.com/spreadsheets/d/1MFBGJbOXVjtThgj5b6K0rv9xdsC1M2GQ0pJVB-8YCeU/edit#gid=2042942971">Google Spreadsheet</a> and displays it in a responsive, navigable format.
-      <ul>
-        <li>See it live: <a href="https://osu-cs-course-explorer.com/">osu-cs-course-explorer.com</a></li>
-      </ul>
-    </p>
-  </section>
+<!--        &lt;!&ndash; Scene Together In &ndash;&gt;-->
+<!--        <section class="project-cell">-->
+<!--          <a href="https://github.com/manderly/scene-together" class="image"><img src="projectimgs/project_scenetogether.jpg"></a>-->
+<!--          <header>-->
+<!--            <h3>Scene Together In...</h3>-->
+<!--          </header>-->
+<!--          <p><a href="https://github.com/manderly/scene-together">Project GitHub</a></p>-->
+<!--          <p>Find what shows your favorite actors have been in together with this <b>React</b> app I made to explore <b>The Movie Database API</b>.-->
+<!--            &lt;!&ndash; <ul>-->
+<!--              <li>See it live: <a href="https://scene-together.herokuapp.com/">Scene Together In</a></li>-->
+<!--            </ul> &ndash;&gt;-->
+<!--        </section>-->
 
-  <!-- Amazin' Affiliate Link Checker -->
-  <section class="project-cell">
-    <a href="https://github.com/manderly/amazin-link-checker" class="image"><img src="projectimgs/project_amazin.png"></a>
-    <header>
-      <h3>Amazin' Affiliate Link Checker</h3>
-    </header>
-    <p><a href="https://github.com/manderly/amazin-link-checker">Project GitHub</a></p>
-    <p>Identify broken Amazon Affiliate links in your blog articles using this single-page app built using <b>React</b>, <b>Socket.io</b>, and the <b>Amazon Product Advertising API</b>. <a href="https://youtu.be/Y0l0wju3tZg">Watch a demo video</a>.
-      <!-- <ul>
-        <li>See it live: <a href="https://amazin-link-checker.herokuapp.com/">Amazin' Affiliate Link Checker</a></li>
-        <li></li>
-      </ul> -->
-  </section>
+      </div>
+    </section><!-- closes project section-->
+  </div> <!-- closes featured-work-wrapper -->
 
-  <!-- Scene Together In -->
-  <section class="project-cell">
-    <a href="https://github.com/manderly/scene-together" class="image"><img src="projectimgs/project_scenetogether.jpg"></a>
-    <header>
-      <h3>Scene Together In...</h3>
-    </header>
-    <p><a href="https://github.com/manderly/scene-together">Project GitHub</a></p>
-    <p>Find what shows your favorite actors have been in together with this <b>React</b> app I made to explore <b>The Movie Database API</b>.
-      <!-- <ul>
-        <li>See it live: <a href="https://scene-together.herokuapp.com/">Scene Together In</a></li>
-      </ul> -->
-  </section>
-
-  </div>
-</section><!-- closes project section-->
-</div> <!-- closes featured-work-wrapper -->
+<div class="divider"></div>
 
 <div class="resume-wrapper">
   <!-- Other projects -->
@@ -111,11 +103,29 @@
     <ul>
       <li><a href="https://github.com/manderly/amazin-wp-product-box">Amazin WP Product Box</a> - a Wordpress plugin <a href="https://www.tilcode.com/building-a-wordpress-product-box-plugin-part-1-making-my-own-plugin-management-page/">I made</a> for my own sites</li>
       <li><a href="https://github.com/manderly/grocery_go">Grocery Go</a> - Hobby project to try out Flutter and <a href="https://www.tilcode.com/building-a-flutter-app-part-1-installation-and-setup/">document my learnings</a></li>
-      <li><a href="https://github.com/manderly/godot-guildleader">Guild Leader</a> - Godot-engine hobby game project, for which I developed <a href="https://github.com/manderly/godot-guildleader/tree/master/parsely">my own data formatting tool</a></li>
-      <li><a href="https://www.tilcode.com/">TILcode.com</a> - my coding blog with tutorials</li>
+      <li><a href="https://www.tilcode.com/">TILcode.com</a> - my code blog (tutorials and stuff I got stuck on)</li>
+      <li><a href="https://www.instagram.com/manderlyb/">My digital paintings</a> - Instagram gallery (iPad/Procreate paintings, SFW)</li>
     </ul>
   </section>
 </div>
+
+<!-- education section -->
+<div class="divider"></div>
+
+<section id="education">
+  <h2>Education</h2>
+
+  <div class="degrees-container">
+    <h4 class="degree">Bachelor of Science in Computer Science (2020)</h4>
+    <p class="school-name">Oregon State University</p>
+
+    <h4 class="degree">Certificate, Full Stack JavaScript (2014)</h4>
+    <p class="school-name">CodeFellows Seattle</p>
+
+    <h4 class="degree">Bachelor of Fine Arts, Game Art and Design (2006)</h4>
+    <p class="school-name">The Illinois Institute of Art - Schaumburg</p>
+  </div>
+</section>
 
 <div class="resume-wrapper">
   <!-- resume section -->
@@ -128,20 +138,22 @@
   <span class="dates">Jan. 2022 - Now</span>
 
   <ul>
-      <li>- Developed front-end features for industrial analytics app</li>
-      <li>- Mentored team intern (6 month internship)</li>
+    <li>- Designed and implemented front-end features for industrial analytics app that scored highly in user surveys</li>
+    <li>- Modernized aspects of the front-end codebase</li>
+    <li>- Mentored team intern (6-month internship)</li>
+    <li>- Took ownership of i18n and worked with external vendor to refine process </li>
+    <li>- Lead "Front End Guild" and gave talks on testing, interesting bugs, books, and more</li>
   </ul>
   
   <h3>Software Engineer @ Expedia</h3>
   <span class="dates">Jan. 2015 - Aug. 2017</span>
 
   <ul>
-      <li>- Developed full-stack features for multi-platform, multi-user apps in Ember and AngularJS</li>
-      <li>- Lead a 2-month embedded apprenticeship coding project working with a pair of college freshmen to add new photo upload and management functionality to an existing Ember-based app</li>
-      <li>- Supported and added features to web app built in AngularJS, JavaScript, and Scala</li>
-      <li>- Debugged, improved, and added to the project's automated tests (Karma, Ruby/Cucumber)</li>
-      <li>- Wrote MySQL stored procedures</li>
-      <li>- Regular contributor to project-specific and onboarding documentation</li>
+    <li>- Lead an embedded apprenticeship project working with a pair of college freshmen to add new photo upload and management functionalities to Ember-based app</li>
+    <li>- Identified root causes of various date picker and timezone issues, implemented improvements</li>
+    <li>- Contributed to the design and flow of new user onboarding experience</li>
+    <li>- Debugged, improved, and added to the project's automated tests (Karma, Ruby/Cucumber)</li>
+    <li>- Regular contributor to project-specific and onboarding documentation</li>
   </ul>
 
   <h3>Independent Web Developer</h3>
