--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <div class="divider"></div>
 
 <section id="projects">
-    <h2 class="centered-text">Project Portfolio</h2>
+    <h2 class="centered-text">Hobby Projects</h2>
     <div class="row">
         <!-- CS Course Explorer -->
         <section class="project-cell">
